src/styles/beatHome.css
* {
    font-family: 'Open Sans', sans-serif;
  }

@media screen and (max-width: 1024px) {
.beatcover {
    width: 450px;
    height: 450px;
    border-radius: 15px;
}

.addToCartBtn {
    background-color: rgb(255, 162, 0);
    width: 360px;
    height: 100px;
}

.download {
    background-color: rgb(255, 162, 0);
    width: 360px;
    height: 100px;
    font-size: 53px;
}
.addToCartLogo {
    width: 70px;
    height: 70px;
    margin-top: 10px;
    margin-left: 52px;
}
.moneyTextStyle {
    font-size: 58px;
    text-align: center;
}

.play {
    width: 75px;
    margin-right: 15px;
    margin-top: 13px;
    margin-left: -10px;
}
.pause {
    width: 75px;
    margin-right: 15px;
    margin-top: 13px;
    margin-left: -10px;
} 
}

@media screen and (min-width: 1024px) {
    .beatcover {
        width: 150px;
        height: 150px;
        border-radius: 7px;
        margin-left: -210px;
    }
    .beatNameDesk {
        margin-top: 0px;
        margin-left: 5px;
    }
    .play {
        width:30px;
        margin-top: 6px;
        margin-left: 15px;
    }
    .artistStyle {
        margin-left: 16px;
        margin-top: 5px;
    }
    .addToCartLogo {
        width: 25px;
        height: 25px;
        margin-top: 7px;
        margin-right: 1px;
        margin-left: 27px;
    }
    .addToCartBtn {
        background-color: rgb(255, 162, 0);
        margin-left: 15px;
        margin-top: 10px;
        width: 150px;
        height: 40px;
    }
    .moneyTextStyle {
        margin-top: 3px;
        font-size: 22px;
    }
    .download {
        margin-top: 7.5px;
    }
    .downloadLogo {
        width: 25px;
        margin-top: 5px;
        margin-left: 10.2px;
        margin-right: 3px;
    }
    .tagText {
        margin-top: 16px;
    }
}

